@@ -2,6 +2,7 @@ package org.jabref.logic.importer.fetcher;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
@@ -93,20 +94,20 @@ public class INSPIREFetcher implements SearchBasedParserFetcher, EntryBasedFetch
         Optional<String> eprint = entry.getField(StandardField.EPRINT);
         String url;
 
-        if ("arXiv".equals(archiveprefix.get()) && !eprint.isEmpty()) {
+        if (archiveprefix.filter("arxiv"::equals).isPresent() && eprint.isPresent()) {
             url = INSPIRE_ARXIV_HOST + eprint.get();
-        } else if (!doi.isEmpty()) {
+        } else if (doi.isPresent()) {
             url = INSPIRE_DOI_HOST + doi.get();
         } else {
             return results;
         }
 
         try {
-            URLDownload download = getUrlDownload(new URL(url));
+            URLDownload download = getUrlDownload(new URI(url).toURL());
             results = getParser().parseEntries(download.asInputStream());
             results.forEach(this::doPostCleanup);
             return results;
-        } catch (IOException | ParseException e) {
+        } catch (IOException | ParseException | URISyntaxException e) {
             throw new FetcherException("Error occurred during fetching", e);
         }
     }
